...
}

class UsersListViewController: BaseViewController<UsersListPresenter> {

    // MARK: Outlets

    @IBOutlet weak var usersTableView: UITableView!

    // MARK: UIViewController

    override func loadView() {
        super.loadView()
        self.loadNibFor(viewControllerClass: UsersListViewController.self)
...
        setupView()
    }

    // MARK: Private methods

    private func setupView() {
        self.title = "Random Users"
        self.view.backgroundColor = UIColor.superLightBrown
        usersTableView.separatorStyle = .none
        usersTableView.register(UINib(nibName: String(describing: UsersListTableViewCell.self), bundle: nil),
                                forCellReuseIdentifier: String(describing: UsersListTableViewCell.self))
        usersTableView.delegate = self
        usersTableView.dataSource = self
...
